<resources>
    <string name="bdp_update_request_net_error">网络连接错误，请稍后重试</string>
    <string name="bdp_update_title_download">发现新版本</string>
    <string name="bdp_update_title_install">发现新版本安装包</string>
    <string name="bdp_update_title_as">提示</string>
    <string name="bdp_update_download_main_tip">%1$s → %2$s / %3$s</string>
    <string name="bdp_update_install_main_tip">%1$s → %2$s</string>
    <string name="bdp_update_minor_tip">更新内容：</string>
    <string name="bdp_update_action_download">立即升级</string>
    <string name="bdp_update_action_install">立即安装</string>
    <string name="bdp_update_not_now">暂不升级</string>
    <string name="bdp_update_ignore">忽略此版本</string>
    <string name="bdp_update_new_download">发现新版本，点击更新</string>
    <string name="bdp_update_download_complete">新版本下载完成，点击安装</string>
    <string name="bdp_update_as_notify_title">百度手机助手</string>
    <string name="bdp_update_as_notify_tip">百度手机助手</string>
    <string name="bdp_update_as_download_complete">百度手机助手下载完成</string>
    <string name="bdp_update_as_install_tip">推荐您使用百度手机助手进行升级。您尚未安装百度手机助手，请先安装。</string>
    <string name="bdp_update_as_action_install">安装</string>
    <string name="bdp_update_as_action_cancel">取消</string>
    <string name="config_import_vcard_type">default</string>
    <string name="toggle_cn">0</string>
    <string name="toggle_cn_cand">1</string>
    <string name="toggle_en_lower">2</string>
    <string name="toggle_en_upper">3</string>
    <string name="toggle_en_sym1">4</string>
    <string name="toggle_en_sym2">5</string>
    <string name="toggle_smiley">6</string>
    <string name="toggle_enter_go">7</string>
    <string name="toggle_enter_search">8</string>
    <string name="toggle_enter_send">9</string>
    <string name="toggle_enter_next">10</string>
    <string name="toggle_enter_done">11</string>
    <string name="toggle_row_cn">12</string>
    <string name="toggle_row_en">13</string>
    <string name="toggle_row_uri">14</string>
    <string name="toggle_row_emailaddress">15</string>
    <string name="toggle_phone_sym">3</string>
    <string name="app_name">团队</string>
    <string name="contacts">团队</string>
    <string name="group">聊天</string>
    <string name="recent">最近通话</string>
    <string name="event">工作</string>
    <string name="aboutme">我</string>
    <string name="activity_not_found">activity not found</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="err_acc_sensor">传感器不正常，左右键盘切换可能有问题！</string>
    <string name="validate_second_privacy_agreement">同意相关的服务条款后才能使用此业务</string>
    <string name="create_circle">创建电话圈</string>
    <string name="create_yellowpage">创建黄页</string>
    <string name="subscribe_group">订阅黄页</string>
    <string name="phone_desc">+</string>
    <string name="phone_country">86</string>
    <string name="input_password">输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_page">注册团队</string>
    <string name="phone_number">手机号码</string>
    <string name="get_active_code">获取验证码</string>
    <string name="set_action_code">短信验证码</string>
    <string name="passwd">密码(六位以上数字或字母)</string>
    <string name="new_passwd">请输入新密码</string>
    <string name="label_privacy_agreement">我已阅读并同意\"使用条款和隐私政策\"</string>
    <string name="no_account">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="get_active_code_wait">请等待倒计时</string>
    <string name="active_failure_no_network">请求失败，可能是没有网络</string>
    <string name="get_verify_code_failure">您的操作过于频繁，请24小时后再试</string>
    <string name="network_server_error">网络服务器返回错误</string>
    <string name="active_code_error">验证码错误</string>
    <string name="active_code_empty">请输入验证码</string>
    <string name="validate_country_code">国家代码为必填项</string>
    <string name="validate_phone_num">手机号码为必填项</string>
    <string name="validate_china_phone_num">请输入合法的手机号码</string>
    <string name="validate_passwd">密码长度最小需要6位</string>
    <string name="validate_privacy_agreement">同意相关的服务条款后才能使用云功能</string>
    <string name="active_tongxingzheng_tv1">请您确认完全阅读并同意</string>
    <string name="active_tongxingzheng_tv2">\"使用条款和隐私政策\"</string>
    <string name="active_read_agreement">再读一遍</string>
    <string name="active">启用</string>
    <string name="alert_title">验证码短信已发送</string>
    <string name="alert_message">"根据不同的地区可能会等待数秒至数分钟，收到后请填写在验证码一栏，然后点击“启用”。
 在一个小时内填写验证码均有效"</string>
    <string name="active_success">成功启用</string>
    <string name="active_failure">启用失败</string>
    <string name="title_bar_list_name">"〈  %s"</string>
    <string name="pass_word">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRETUVWXYZ</string>
    <string name="login_success">登录成功</string>
    <string name="login_failure">登录失败</string>
    <string name="illegal_name_or_passwd">用户名或密码错误</string>
    <string name="get_again">请重新获取验证码</string>
    <string name="modify_passwd">修改密码</string>
    <string name="modify_passwd_error">原始密码错误</string>
    <string name="modify_passwd_success">修改密码成功</string>
    <string name="modify_passwd_fail">修改密码失败</string>
    <string name="register_notice">以上信息将会出现在你的个人名片中</string>
    <string name="exit_group_confirm">确定退出 %s 吗？</string>
    <string name="remove_group_confirm">确定解散 %s 吗？</string>
    <string name="label_btn_ok">确认</string>
    <string name="label_btn_delete">删除</string>
    <string name="exit_group_error">退出团队失败</string>
    <string name="exit_group_ok">退出团队成功</string>
    <string name="clear">清空</string>
    <string name="call_count">(%s)</string>
    <string name="cloud_contact_count" formatted="false">结果： %d /%d个</string>
    <string name="for_more">点击此处显示更多…</string>
    <string name="removeskin">卸载皮肤</string>
    <string name="removeskinask">是否卸载皮肤a？</string>
    <string name="footer_view_match">"精确到： %s 位
"</string>
    <string name="footer_view_search">查询字： %s</string>
    <string name="localmsg_twosims">有双卡插件需要安装</string>
    <string name="no_browser">没有安装浏览器</string>
    <string name="roaming_call_back_cm_code">**139*%s#</string>
    <string name="roaming_call_back_ct_code">**133*%s#</string>
    <string name="roaming_call_back_cu_code">**100*%s#</string>
    <string name="tv_contact_detail">联系人详情</string>
    <string name="share">分享</string>
    <string name="chat">免费聊天</string>
    <string name="shake_to_dail">摇一摇拨出</string>
    <string name="edit">编辑</string>
    <string name="add_to_blacklist">加入黑名单</string>
    <string name="delet_contact">删除联系人</string>
    <string name="delet_contacts">批量删除联系人</string>
    <string name="add_chat_group_contacts">添加小组成员</string>
    <string name="add_group_contact">添加管理员</string>
    <string name="add_event_receiver">选择收件人</string>
    <string name="dialog_label_dial_none">此人没有号码</string>
    <string name="dialog_label_dial_note">请输入至少3位号码</string>
    <string name="dialog_label_dial_btn">重新输入</string>
    <string name="unknown">无名称</string>
    <string name="no_number">无号码</string>
    <string name="order_by_name_string">按姓名顺序</string>
    <string name="order_by_frequency_string">按联系频率</string>
    <string name="guhua_call">固话拨打</string>
    <string name="normal_call">固话拨打</string>
    <string name="ip_call">IP拨打</string>
    <string name="dx_call">固话拨打</string>
    <string name="sc_call">副号拨打</string>
    <string name="non_group">无分组</string>
    <string name="moren">默认铃声</string>
    <string name="local_contact">本地通讯录</string>
    <string name="allcontacts_displayname">全部联系人</string>
    <string name="nogroup_displayname">未分组</string>
    <string name="human_count">(%s)</string>
    <string name="pop_copy">通讯录备份</string>
    <string name="pop_card">名片批量传送</string>
    <string name="pop_delete">名片批量删除</string>
    <string name="pop_cancal">取消</string>
    <string name="create_number_group">创建团队</string>
    <string name="manage_number_group">管理团队</string>
    <string name="number_group_detail">团队详情</string>
    <string name="label_settting_comlete">完成</string>
    <string name="select_all">全选</string>
    <string name="batch_operation_sendsms_sendlabel">完成</string>
    <string name="mainactivity_btn_send">完成</string>
    <string name="batch_operation_upload">添加</string>
    <string name="invite">邀请</string>
    <string name="batch_operation_del">删除(%s)</string>
    <string name="little_mind">“私有/共享”类型在创建后将不可再修改，请再次确定设置好了</string>
    <string name="share_text">"温馨提示:
1、为避免群重名，建议设计有特征的群名称，比如：××学校××班同学录
2、此号码群为共享群，群内成员或通过密码验证者加入共享群后，实现相互沟通"</string>
    <string name="simcard_not_inserted">无 SIM 卡</string>
    <string name="add_contactlist_title">联系人正在导入团队,请稍…</string>
    <string name="batching_none_select">没有选择联系人</string>
    <string name="add_group">添加群组</string>
    <string name="addcontact_success">联系人添加完成</string>
    <string name="addcontact_fail">联系人添加出错</string>
    <string name="notice">提示</string>
    <string name="batch_operation_complete">完成</string>
    <string name="batch_operation_delete">删除</string>
    <string name="batch_operation_send">发送</string>
    <string name="incall_2_sms_prefix">(拨号精灵提示:对方现在可能不方便接电话，建议发短信)</string>
    <string name="msg_center_block_user">拦截了%s的来电</string>
    <string name="user_actived_info">"
%s 启用了团队"</string>
    <string name="unknown_name">无名氏</string>
    <string name="namecard_change_info">"
%s 更新了联系信息"</string>
    <string name="end_call_text">停止重复拨打</string>
    <string name="touch_me_to_move">点此拖动窗体</string>
    <string name="moveout_from_blacklist">移出黑名单</string>
    <string name="move_to_blacklist">加入黑名单</string>
    <string name="select_delete_type">请选择要删除的类型</string>
    <string name="dialog_label_confirm_note">确认删除</string>
    <string name="delete_contact">"联系人： %s 

警告：删除后只能重新从本地添加才能恢复，建议使用“团队”先做好本地数据的备份。"</string>
    <string name="delete_one_contact">是否要删除联系人： %s</string>
    <string name="label_group_name_spinner">%s▼</string>
    <string name="remove_contact_success">联系人删除成功</string>
    <string name="remove_contact_fail">联系人删除失败</string>
    <string name="gps_warning">您的GPS已关闭</string>
    <string name="turn_on_gps">是否开启GPS？</string>
    <string name="editContact_title_edit">编辑联系人</string>
    <string name="account_phone">手机联系人</string>
    <string name="postal_street">街道</string>
    <string name="postal_pobox">信箱</string>
    <string name="postal_neighborhood">区域</string>
    <string name="postal_city">城市</string>
    <string name="postal_region">省份</string>
    <string name="postal_postcode">邮政编码</string>
    <string name="postal_country">国家/地区</string>
    <string name="name_given">名字</string>
    <string name="name_family">姓氏</string>
    <string name="name_prefix">名称前缀</string>
    <string name="name_middle">中间名</string>
    <string name="name_suffix">名称后缀</string>
    <string name="name_phonetic_given">名字拼音</string>
    <string name="name_phonetic_family">姓氏拼音</string>
    <string name="nicknameLabelsGroup">昵称</string>
    <string name="organizationLabelsGroup">组织</string>
    <string name="websiteLabelsGroup">网站</string>
    <string name="eventLabelsGroup">活动</string>
    <string name="reset_psw">修改密码</string>
    <string name="old_psw">原密码</string>
    <string name="new_psw">新密码</string>
    <string name="input_old_psw">请输入原密码</string>
    <string name="input_new_psw">请输入6位或6位以上新密码</string>
    <string name="no_disturb">免打扰</string>
    <string name="no_disturb_text">开启时对方来电将被挂断</string>
    <string name="state_text">状态</string>
    <string name="emergency_mode">紧急模式</string>
    <string name="emergency_mode_desc">三分钟内连续来电两次，则可接通</string>
    <string name="time_period_title">开启的时间范围</string>
    <string name="time_start">开始时间</string>
    <string name="time_stop">结束时间</string>
    <string name="vip_group_title">允许这些人的来电</string>
    <string name="use_status_sms">挂断电话后使用以下状态以短信回复</string>
    <string name="ap_reason_1">事假</string>
    <string name="ap_reason_2">病假</string>
    <string name="ap_reason_3">年假</string>
    <string name="ap_reason_4">婚假</string>
    <string name="ap_reason_5">产假</string>
</resources>