<?xml version="1.0" encoding="utf-8"?>
<skb_template skb_bg="@drawable/transparent" key_xmargin="0.5%p" key_ymargin="5%p" balloon_bg="@drawable/iphone_center_pressed" popup_bg="@drawable/miniskb_bg" color="@color/label_color" color_highlight="@color/label_color" color_balloon="@color/balloon_color">
    <key_type id="0" bg="@drawable/iphone_normal" hlbg="@drawable/iphone_normal" color_highlight="@color/label_color_hl0" />
    <key_type id="1" bg="@drawable/normal_key_bg" hlbg="@drawable/normal_key_hl_bg" />
    <key_type id="2" bg="@drawable/iphonekey_del_normal" hlbg="@drawable/iphonekey_del_pressed" />
    <key_type id="3" bg="@drawable/star" hlbg="@drawable/star_pressed" />
    <key_type id="4" />
    <key_type id="5" bg="@drawable/normal_key_bg" hlbg="@drawable/normal_key_hl_bg" color_highlight="@color/label_color_hl0" />
    <key_icon code="66" icon="@drawable/enter_icon" icon_popup="@drawable/enter_popup_icon" />
    <key_icon code="62" icon="@drawable/space_icon" icon_popup="@drawable/space_popup_icon" />
    <key_icon code="67" icon="@drawable/delete_icon" icon_popup="@drawable/delete_popup_icon" />
    <key id="1" start_pos_x="80%p" start_pos_y="75%p" width="20%p" height="25%p" code="66" key_type="1">
        <toggle_state state_id="@string/toggle_enter_go" label="去往" code="66" />
        <toggle_state state_id="@string/toggle_enter_search" code="66" icon="@drawable/search_icon" icon_popup="@drawable/search_popup_icon" />
        <toggle_state state_id="@string/toggle_enter_send" label="发送" code="66" />
        <toggle_state state_id="@string/toggle_enter_next" label="下一个" code="66" />
        <toggle_state state_id="@string/toggle_enter_done" label="完成" code="66" />
    </key>
    <key id="2" start_pos_x="75%p" start_pos_y="75%p" width="25%p" height="25%p" code="66" key_type="1" balloon="false">
        <toggle_state state_id="@string/toggle_enter_go" label="去往" code="66" />
        <toggle_state state_id="@string/toggle_enter_search" code="66" icon="@drawable/search_icon" icon_popup="@drawable/search_popup_icon" />
        <toggle_state state_id="@string/toggle_enter_send" label="发送" code="66" />
        <toggle_state state_id="@string/toggle_enter_next" label="下一个" code="66" />
        <toggle_state state_id="@string/toggle_enter_done" label="完成" code="66" />
    </key>
    <key id="3" start_pos_x="85.715%p" start_pos_y="50%p" width="14.286%p" height="25%p" code="67" key_type="1" repeat="true" />
    <key id="4" code="-3" start_pos_x="20%p" start_pos_y="75%p" width="14.696%p" height="25%p" key_type="2" label="\?123" />
    <key id="5" code="-3" start_pos_x="20%p" start_pos_y="75%p" width="14.696%p" height="25%p" key_type="3" label="\?123" />
    <key id="6" start_pos_x="0%p" start_pos_y="75%p" width="20%p" height="25%p" code="-2" label="中 文" key_type="1" repeat="true">
        <toggle_state state_id="@string/toggle_en_lower" label="英 文" code="-2" />
        <toggle_state state_id="@string/toggle_en_upper" label="英 文" code="-2" />
    </key>
    <key id="7" start_pos_x="65.304%p" start_pos_y="75%p" width="14.696%p" height="25%p" label="." key_type="0" icon="@drawable/period_icon" icon_popup="@drawable/period_popup_icon" />
</skb_template>