<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/frag_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@color/title_bg" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <LinearLayout android:gravity="center" android:id="@id/reset_ll_back" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentLeft="true">
            <ImageView android:background="@drawable/btn_back_selector" android:layout_width="10.0dip" android:layout_height="19.5dip" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" />
        </LinearLayout>
        <TextView android:textSize="@dimen/module_title" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset_psw" android:layout_centerInParent="true" android:layout_centerVertical="true" />
        <Button android:textSize="@dimen/module_title" android:textColor="@color/white" android:id="@id/btn_resetpsw_confirm" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="14.0dip" android:text="@string/ok" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <View android:background="@color/line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="@dimen/module_title" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="16.0dip" android:text="@string/old_psw" />
    <View android:background="@color/line" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" />
    <EditText android:textSize="18.0sp" android:id="@id/et_old_psw" android:background="@color/white" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/input_old_psw" android:digits="@string/pass_word" android:inputType="number" />
    <View android:background="@color/line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="@dimen/module_title" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="16.0dip" android:text="@string/new_psw" />
    <View android:background="@color/line" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" />
    <EditText android:textSize="18.0sp" android:id="@id/et_new_psw" android:background="@color/white" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/input_new_psw" android:digits="@string/pass_word" android:inputType="number" />
    <View android:background="@color/line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
</LinearLayout>