<?xml version="1.0" encoding="utf-8"?>
<com.lzx.iteam.widget.ResizeLinerLayout android:orientation="vertical" android:id="@id/ll_root" android:background="@color/frag_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ScrollView style="@style/MyScrollViewStyle">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/iv_cloud_logo" android:layout_width="wrap_content" android:layout_height="80.0dip" android:layout_marginTop="40.0dip" android:src="@drawable/login_icon" />
                <TextView android:textSize="18.0dip" android:textColor="@color/black" android:layout_gravity="center_horizontal" android:id="@id/tv_login_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/app_name" />
                <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip">
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip">
                        <TextView android:textSize="18.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/phone_desc" android:layout_centerVertical="true" />
                        <EditText android:enabled="false" android:textColor="@color/black" android:textColorHint="@color/black" android:id="@id/et_login_country" android:background="@null" android:layout_width="45.0dip" android:layout_height="fill_parent" android:text="@string/phone_country" android:inputType="number" />
                        <View android:layout_gravity="center_vertical" android:background="#fff4f4f4" android:layout_width="1.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" />
                        <EditText android:id="@id/et_login_phone" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:hint="@string/phone_number" android:inputType="phone" />
                    </LinearLayout>
                    <View android:background="#fff4f4f4" android:layout_width="fill_parent" android:layout_height="1.3999939dip" />
                    <EditText android:id="@id/et_login_password" android:background="@null" android:paddingLeft="6.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/input_password" android:password="true" android:digits="@string/pass_word" />
                    <LinearLayout android:orientation="vertical" android:background="@color/frag_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <Button android:textSize="16.0dip" android:textColor="@color/white" android:id="@id/btn_login" android:background="@drawable/login_button_selector" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/login" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:layout_alignParentBottom="true">
            <TextView android:textColor="@color/common_blue" android:id="@id/tv_no_account" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="注册账户" />
            <TextView android:textColor="@color/common_blue" android:id="@id/tv_forget_password" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="100.0dip" android:text="密码找回" />
        </LinearLayout>
    </RelativeLayout>
</com.lzx.iteam.widget.ResizeLinerLayout>