<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/view_cancel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:paddingTop="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <TextView android:textSize="@dimen/schedule_main_time1" android:textColor="@color/schedule_manager_no_data" android:gravity="center" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="请假理由" />
        <View android:background="#fff1f1f1" android:layout_width="fill_parent" android:layout_height="0.6dip" />
        <TextView android:textSize="@dimen/schedule_main_time1" android:textColor="@color/schedule_content" android:gravity="center" android:id="@id/ap_reason_1" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/ap_reason_1" />
        <View android:background="#fff1f1f1" android:layout_width="fill_parent" android:layout_height="0.6dip" />
        <TextView android:textSize="@dimen/schedule_main_time1" android:textColor="@color/schedule_content" android:gravity="center" android:id="@id/ap_reason_2" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/ap_reason_2" />
        <View android:background="#fff1f1f1" android:layout_width="fill_parent" android:layout_height="0.6dip" />
        <TextView android:textSize="@dimen/schedule_main_time1" android:textColor="@color/schedule_content" android:gravity="center" android:id="@id/ap_reason_3" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/ap_reason_3" />
        <View android:background="#fff1f1f1" android:layout_width="fill_parent" android:layout_height="0.6dip" />
        <TextView android:textSize="@dimen/schedule_main_time1" android:textColor="@color/schedule_content" android:gravity="center" android:id="@id/ap_reason_4" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/ap_reason_4" />
        <View android:background="#fff1f1f1" android:layout_width="fill_parent" android:layout_height="0.6dip" />
        <TextView android:textSize="@dimen/schedule_main_time1" android:textColor="@color/schedule_content" android:gravity="center" android:id="@id/ap_reason_5" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/ap_reason_5" />
        <View android:background="#fff1f1f1" android:layout_width="fill_parent" android:layout_height="5.0dip" />
        <TextView android:textSize="@dimen/schedule_main_time1" android:textColor="@color/schedule_content" android:gravity="center" android:id="@id/ap_reason_cancle" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="取消" />
    </LinearLayout>
</LinearLayout>