<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/no_disturb_container" android:padding="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout android:layout_gravity="top" android:orientation="vertical" android:background="@drawable/list_bg_sel" android:visibility="invisible" android:clickable="true" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="50.0dip">
            <TextView android:textColor="@color/allcontacts_number_text_color" android:layout_gravity="center_vertical" android:id="@id/state_disturb_name" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/no_disturb" style="@style/StyleTextViewSetting" />
            <TextView android:textColor="@color/allcontacts_number_text_color" android:layout_gravity="center_vertical" android:clickable="false" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/no_disturb_text" android:layout_below="@id/state_disturb_name" style="@style/StyleTextViewSettingSmall" />
            <com.lzx.iteam.widget.SlipButton android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="64.599976dip" android:layout_height="28.0dip" android:layout_marginRight="3.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:orientation="vertical" android:id="@id/time_period" android:background="@drawable/yaoyiyao_frient_item_topsel" android:clickable="true" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/allcontacts_number_text_color" android:id="@id/time_period_title" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/time_period_title" style="@style/StyleTextViewSetting" />
            <Spinner android:id="@id/time_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/time_period_title" android:layout_alignLeft="@id/time_period_title" />
            <Button android:id="@id/time_start" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time_start" android:layout_below="@id/time_spinner" android:layout_alignLeft="@id/time_period_title" />
            <Button android:id="@id/time_stop" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time_stop" android:layout_toRightOf="@id/time_start" android:layout_below="@id/time_spinner" />
        </RelativeLayout>
        <View android:layout_gravity="fill_horizontal" android:background="#ffa4a6a9" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <RelativeLayout android:gravity="center_vertical" android:id="@id/vip_group" android:background="@drawable/yaoyiyao_frient_item_centersel" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip">
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/allcontacts_number_text_color" android:layout_gravity="center_vertical" android:id="@id/vip_group_title" android:paddingLeft="10.0dip" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/vip_group_title" />
            <ImageView android:gravity="center_vertical" android:id="@id/iv" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="50.0dip" android:src="@drawable/into_normal" android:layout_alignParentRight="true" />
            <TextView android:textColor="@color/allcontacts_number_text_color" android:gravity="center_vertical" android:id="@id/vip_group_desc" android:paddingRight="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_toLeftOf="@id/iv" />
            <TextView android:textColor="@color/allcontacts_number_text_color" android:layout_gravity="center_vertical" android:id="@id/vip_group_status" android:paddingLeft="10.0dip" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/vip_group_title" />
        </RelativeLayout>
        <View android:layout_gravity="fill_horizontal" android:background="#ffa4a6a9" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <RelativeLayout android:gravity="center_vertical" android:id="@id/emergency_mode" android:background="@drawable/yaoyiyao_frient_item_bottomsel" android:clickable="true" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="55.0dip">
            <TextView android:textColor="@color/allcontacts_number_text_color" android:layout_gravity="center_vertical" android:id="@id/emergency_mode_title" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/emergency_mode" style="@style/StyleTextViewSetting" />
            <com.lzx.iteam.widget.SlipButton android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/emergency_mode_toggle" android:layout_width="64.599976dip" android:layout_height="28.0dip" android:layout_marginRight="3.0dip" android:layout_alignParentRight="true" />
            <TextView android:textColor="@color/allcontacts_number_text_color" android:layout_gravity="center_vertical" android:id="@id/emergency_mode_summary" android:clickable="false" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/emergency_mode_desc" android:layout_toLeftOf="@id/emergency_mode_toggle" android:layout_below="@id/emergency_mode_title" android:layout_alignLeft="@id/emergency_mode_title" style="@style/StyleTextViewSettingSmall" />
        </RelativeLayout>
        <CheckBox android:id="@id/use_status_sms" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/use_status_sms" />
        <TextView android:textSize="16.0sp" android:textColor="#ff3c3c3c" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/state_text" />
    </LinearLayout>
    <RelativeLayout android:gravity="center_vertical" android:layout_gravity="top" android:id="@id/state_disturb" android:background="@drawable/list_bg_sel" android:clickable="true" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginBottom="10.0dip">
        <TextView android:textColor="@color/allcontacts_number_text_color" android:layout_gravity="center_vertical" android:id="@id/state_disturb_name" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/no_disturb" style="@style/StyleTextViewSetting" />
        <TextView android:textColor="@color/allcontacts_number_text_color" android:layout_gravity="center_vertical" android:id="@id/state_disturb_text" android:clickable="false" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/no_disturb_text" android:layout_below="@id/state_disturb_name" style="@style/StyleTextViewSettingSmall" />
        <com.lzx.iteam.widget.SlipButton android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/setting_state_disturb" android:layout_width="64.599976dip" android:layout_height="28.0dip" android:layout_marginRight="3.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
</FrameLayout>